--- a/tardis/tardis_portal/templates/tardis_portal/ajax/create_group.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/create_group.html
@@ -4,7 +4,7 @@
       <label class="col-form-label" for="id_addgroup">Name:</label>
       <input type="text" name="addgroup" id="id_addgroup" required
              class="form-control groupsuggest" maxlength="100">
-      <div id="id_addgroup-validation"></div>
+      <div class="invalid-feedback"></div>
     </div>
 
     <div class="form-group">
@@ -13,7 +13,7 @@
       </label>
       <input type="text" name="groupadmin" id="id_groupadmin"
              class="form-control usersuggest" maxlength="100">
-      <div id="id_groupadmin-validation"></div>
+      <div class="invalid-feedback"></div>
     </div>
 
     <div class="form-group text-right pt-2">
