--- a/tardis/tardis_portal/templates/tardis_portal/index.html
+++ b/tardis/tardis_portal/templates/tardis_portal/index.html
@@ -38,9 +38,9 @@
                          class="accordion-toggle private-experiment col-8"
                          data-toggle="collapse"  data-parent="#private-experiments">
                       <input type="hidden" class="exp-index" value="{{ forloop.counter }}">
-                      <strong><a class="pull-left explink"
-                                 href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a>
-                      </strong>
+                      <i class="fa fa-flask"></i>
+                      <a class="explink"
+                         href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a>
                     </div>
                     <div class="col">
                       <ul class="list-inline float-right list-unstyled">
@@ -101,9 +101,9 @@
                    class="accordion-toggle public-experiment col-8"
                    data-toggle="collapse"  data-parent="#public-experiments">
                   <input type="hidden" class="exp-index" value="{{ forloop.counter }}">
-                  <strong><a class="pull-left explink"
-                             href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a>
-                  </strong>
+                  <i class="fa fa-flask"></i>
+                  <a class="explink"
+                     href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a>
                 </div>
                 <div class="col">
                   <ul class="list-inline float-right list-unstyled">
