--- a/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_latest_dataset.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_latest_dataset.html
@@ -1,10 +1,14 @@
 {% for ds in exp.datasets.all|dictsortreversed:"id"|slice:":1" %}
   {% if forloop.first %}
     <ul class="list-group">
-      <li class="list-group-item dataset-list-header small">Latest dataset in this experiment</li>
+      <li class="list-group-item dataset-list-header small pb-1">Latest dataset in this experiment</li>
   {% endif %}
   <li class="list-group-item dataset-list-item">
-    <a href="{% url 'tardis_portal.view_dataset' ds.id %}"><strong>{{ ds.description }}</strong></a>
+    <i class="fa fa-folder o-6"></i>
+    <a class="dataset-link"
+       href="{% url 'tardis_portal.view_dataset' ds.id %}">
+      {{ ds.description }}
+    </a>
     {% for datafile in ds.get_images|slice:":5" %}
       {% if forloop.first %}
         <ul class="thumbnails list-inline">
