--- a/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_recent_datasets.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_recent_datasets.html
@@ -2,11 +2,15 @@
   {% if forloop.first %}
     <ul class="list-group">
     {% with total=exp.datasets.all|length %}
-      <li class="list-group-item dataset-list-header small">The most recent dataset{{total|pluralize}} in this experiment</li>
+      <li class="list-group-item dataset-list-header small pb-1">The most recent dataset{{total|pluralize}} in this experiment</li>
     {% endwith %}
   {% endif %}
   <li class="list-group-item dataset-list-item">
-    <a href="{% url 'tardis_portal.view_dataset' ds.id %}"><strong>{{ ds.description }}</strong></a>
+    <i class="fa fa-folder o-6"></i>
+    <a class="dataset-link"
+       href="{% url 'tardis_portal.view_dataset' ds.id %}">
+      {{ ds.description }}
+    </a>
     {% for datafile in ds.get_images|slice:":5" %}
       {% if forloop.first %}
         <ul class="thumbnails list-inline">
