--- a/tardis/tardis_portal/templates/tardis_portal/ajax/group_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/group_list.html
@@ -1,17 +1,17 @@
 {% for group in groups %}
-<div class="group">
-  <h2>
-    <a href="{% url 'tardis.tardis_portal.views.retrieve_group_userlist' group.id %}"
-       data-group_id="{{group.id}}"
-       class="members-hidden member_list_user_toggle small">
-      <i class="fa fa-folder"></i>
-      {{ group.name }}
-    </a>
-  </h2>
-  <div class="access_list" style="display:none;"></div>
-</div>
-{% empty %}
-<p>
-There are no groups under your control.
-</p>
+  <div class="group">
+    <h2>
+      <a href=""><i class="group-icon fa fa-folder o-6"></i></a>
+      <a href="{% url 'tardis.tardis_portal.views.retrieve_group_userlist' group.id %}"
+         data-group_id="{{group.id}}"
+         class="group-link members-hidden member_list_user_toggle">
+        {{ group.name }}
+      </a>
+    </h2>
+    <div class="access_list" style="display:none;"></div>
+  </div>
+  {% empty %}
+  <p>
+  There are no groups under your control.
+  </p>
 {% endfor %}
