--- a/tardis/tardis_portal/templates/tardis_portal/login.html
+++ b/tardis/tardis_portal/templates/tardis_portal/login.html
@@ -14,7 +14,7 @@
 
 {% else %}
 
-<div class="container">
+<div class="container pt-2">
  <div class="row">
   <div class="col-md-7">
     <form id="login-form" class="form-horizontal" action method="post">
